fix: BLOG-52 increased header height to 700px on tablet/desktop

--- a/static/scss/elements/_sections.scss
+++ b/static/scss/elements/_sections.scss
@@ -216,6 +216,17 @@
 
       &--home {
         padding-top: 140px;
+        .block {
+          &__title {
+            margin: 40px 0 80px;
+          }
+          &__description {
+            margin-bottom: 60px;
+          }
+          &__postfix {
+            margin-top: 60px;
+          }
+        }
       }
 
       &--result {
@@ -233,7 +244,7 @@
       padding-top: 150px;
     }
 
-     &__review-short {
+    &__review-short {
       padding-top: 60px;
       padding-bottom: 80px;
     }
@@ -259,6 +270,17 @@
       &--home {
         padding-top: 150px;
         padding-bottom: 40px;
+        .block {
+          &__title {
+            margin: 20px 0 60px;
+          }
+          &__description {
+            margin-bottom: 50px;
+          }
+          &__postfix {
+            margin-top: 50px;
+          }
+        }
       }
 
       &--result {
